# Odin

./: CMakeLists.txt
assets/shaders/: triangle.frag  triangle.vert
engine/include/Engine/Core/: Application.h  Input.h  Time.h  Window.h
engine/include/Engine/Renderer/: IndexBuffer.h  RenderCommand.h  Renderer.h  Shader.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h
engine/src/Core/: Application.cpp  InputGLFW.cpp  Time.cpp  WindowGLFW.cpp
engine/src/Renderer/: Renderer.cpp  Shader.cpp
sandbox/: CMakeLists.txt  main.cpp
